--- a/manual/emacspeak_002dauctex.html
+++ b/manual/emacspeak_002dauctex.html
@@ -68,6 +68,125 @@
   <h3 class="section">12.20 emacspeak-auctex</h3>
   <p>Speech-enables the AucTeX package. AucTeX, now available from
   ELPA, has been my authoring environment of choice for writing
-  LaTeX since 1991.</p>
+  LaTeX since 1991.</p><span id=
+  "emacspeak_002dauctex-Options"></span>
+  <h4 class="subsection">12.20.1 emacspeak-auctex Options</h4>
+  <dl>
+    <dt id="index-User-Option-90">Variable: <strong>User
+    Option</strong> <em>voice-latex-bold-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-bold-face This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-91">Variable: <strong>User
+    Option</strong>
+    <em>voice-latex-doctex-documentation-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-doctex-documentation-face
+      This personality uses voice-monotone-medium whose effect can
+      be changed globally by customizing
+      voice-monotone-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-92">Variable: <strong>User
+    Option</strong>
+    <em>voice-latex-doctex-preprocessor-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-doctex-preprocessor-face
+      This personality uses voice-brighten-medium whose effect can
+      be changed globally by customizing
+      voice-brighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-93">Variable: <strong>User
+    Option</strong> <em>voice-latex-italic-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-italic-face This
+      personality uses voice-animate whose effect can be changed
+      globally by customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-94">Variable: <strong>User
+    Option</strong> <em>voice-latex-math-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-math-face This personality
+      uses voice-brighten-extra whose effect can be changed
+      globally by customizing voice-brighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-95">Variable: <strong>User
+    Option</strong> <em>voice-latex-sedate-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-sedate-face This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-96">Variable: <strong>User
+    Option</strong> <em>voice-latex-string-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-string-face This
+      personality uses voice-lighten whose effect can be changed
+      globally by customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-97">Variable: <strong>User
+    Option</strong> <em>voice-latex-subscript-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-subscript-face This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-98">Variable: <strong>User
+    Option</strong>
+    <em>voice-latex-superscript-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-superscript-face This
+      personality uses voice-brighten whose effect can be changed
+      globally by customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-99">Variable: <strong>User
+    Option</strong> <em>voice-latex-verbatim-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-verbatim-face This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-100">Variable: <strong>User
+    Option</strong> <em>voice-latex-warning-personality</em></dt>
+    <dd>
+      <p>Personality used for font-latex-warning-face This
+      personality uses voice-bolden-and-animate whose effect can be
+      changed globally by customizing
+      voice-bolden-and-animate-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002dbbc.html" accesskey="n" rel=
+    "next">emacspeak-bbc</a>, Previous: <a href=
+    "emacspeak_002darc.html" accesskey="p" rel=
+    "prev">emacspeak-arc</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
