--- a/manual/emacspeak_002dediff.html
+++ b/manual/emacspeak_002dediff.html
@@ -98,6 +98,165 @@
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dediff-Options"></span>
+  <h4 class="subsection">12.56.2 emacspeak-ediff Options</h4>
+  <dl>
+    <dt id="index-User-Option-184">Variable: <strong>User
+    Option</strong> <em>voice-ediff-current-diff-A</em></dt>
+    <dd>
+      <p>Personality used for ediff-current-diff-A This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-185">Variable: <strong>User
+    Option</strong> <em>voice-ediff-current-diff-Ancestor</em></dt>
+    <dd>
+      <p>Personality used for ediff-current-diff-Ancestor This
+      personality uses voice-lighten-extra whose effect can be
+      changed globally by customizing
+      voice-lighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-186">Variable: <strong>User
+    Option</strong> <em>voice-ediff-current-diff-B</em></dt>
+    <dd>
+      <p>Personality used for ediff-current-diff-B This personality
+      uses voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-187">Variable: <strong>User
+    Option</strong> <em>voice-ediff-current-diff-C</em></dt>
+    <dd>
+      <p>Personality used for ediff-current-diff-C This personality
+      uses voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-188">Variable: <strong>User
+    Option</strong> <em>voice-ediff-even-diff-A</em></dt>
+    <dd>
+      <p>Personality used for ediff-even-diff-A This personality
+      uses voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-189">Variable: <strong>User
+    Option</strong> <em>voice-ediff-even-diff-Ancestor</em></dt>
+    <dd>
+      <p>Personality used for ediff-even-diff-Ancestor This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-190">Variable: <strong>User
+    Option</strong> <em>voice-ediff-even-diff-B</em></dt>
+    <dd>
+      <p>Personality used for ediff-even-diff-B This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-191">Variable: <strong>User
+    Option</strong> <em>voice-ediff-even-diff-C</em></dt>
+    <dd>
+      <p>Personality used for ediff-even-diff-C This personality
+      uses voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-192">Variable: <strong>User
+    Option</strong> <em>voice-ediff-fine-diff-A</em></dt>
+    <dd>
+      <p>Personality used for ediff-fine-diff-A This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-193">Variable: <strong>User
+    Option</strong> <em>voice-ediff-fine-diff-Ancestor</em></dt>
+    <dd>
+      <p>Personality used for ediff-fine-diff-Ancestor This
+      personality uses voice-lighten-extra whose effect can be
+      changed globally by customizing
+      voice-lighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-194">Variable: <strong>User
+    Option</strong> <em>voice-ediff-fine-diff-B</em></dt>
+    <dd>
+      <p>Personality used for ediff-fine-diff-B This personality
+      uses voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-195">Variable: <strong>User
+    Option</strong> <em>voice-ediff-fine-diff-C</em></dt>
+    <dd>
+      <p>Personality used for ediff-fine-diff-C This personality
+      uses voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-196">Variable: <strong>User
+    Option</strong> <em>voice-ediff-odd-diff-A</em></dt>
+    <dd>
+      <p>Personality used for ediff-odd-diff-A This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-197">Variable: <strong>User
+    Option</strong> <em>voice-ediff-odd-diff-Ancestor</em></dt>
+    <dd>
+      <p>Personality used for ediff-odd-diff-Ancestor This
+      personality uses voice-lighten whose effect can be changed
+      globally by customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-198">Variable: <strong>User
+    Option</strong> <em>voice-ediff-odd-diff-B</em></dt>
+    <dd>
+      <p>Personality used for ediff-odd-diff-B This personality
+      uses voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-199">Variable: <strong>User
+    Option</strong> <em>voice-ediff-odd-diff-C</em></dt>
+    <dd>
+      <p>Personality used for ediff-odd-diff-C This personality
+      uses voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002deglot.html" accesskey="n" rel=
+    "next">emacspeak-eglot</a>, Previous: <a href=
+    "emacspeak_002dediary.html" accesskey="p" rel=
+    "prev">emacspeak-ediary</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
