--- a/manual/emacspeak_002depa.html
+++ b/manual/emacspeak_002depa.html
@@ -67,6 +67,80 @@
   <span id="emacspeak_002depa-1"></span>
   <h3 class="section">12.66 emacspeak-epa</h3>
   <p>EPA == EasyPG Assistant Integrate GPG functionality into
-  Emacs. Speech-enable all interactive commands.</p>
+  Emacs. Speech-enable all interactive commands.</p><span id=
+  "emacspeak_002depa-Options"></span>
+  <h4 class="subsection">12.66.1 emacspeak-epa Options</h4>
+  <dl>
+    <dt id="index-User-Option-218">Variable: <strong>User
+    Option</strong> <em>voice-epa-field-body</em></dt>
+    <dd>
+      <p>Personality used for epa-field-body This personality uses
+      voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-219">Variable: <strong>User
+    Option</strong> <em>voice-epa-field-name</em></dt>
+    <dd>
+      <p>Personality used for epa-field-name This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-220">Variable: <strong>User
+    Option</strong> <em>voice-epa-mark</em></dt>
+    <dd>
+      <p>Personality used for epa-mark This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-221">Variable: <strong>User
+    Option</strong> <em>voice-epa-string</em></dt>
+    <dd>
+      <p>Personality used for epa-string This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-222">Variable: <strong>User
+    Option</strong> <em>voice-epa-validity-disabled</em></dt>
+    <dd>
+      <p>Personality used for epa-validity-disabled This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-223">Variable: <strong>User
+    Option</strong> <em>voice-epa-validity-high</em></dt>
+    <dd>
+      <p>Personality used for epa-validity-high This personality
+      uses voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-224">Variable: <strong>User
+    Option</strong> <em>voice-epa-validity-low</em></dt>
+    <dd>
+      <p>Personality used for epa-validity-low This personality
+      uses voice-smoothen-extra whose effect can be changed
+      globally by customizing voice-smoothen-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-225">Variable: <strong>User
+    Option</strong> <em>voice-epa-validity-medium</em></dt>
+    <dd>
+      <p>Personality used for epa-validity-medium This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
 </body>
 </html>
