--- a/manual/emacspeak_002dido.html
+++ b/manual/emacspeak_002dido.html
@@ -76,10 +76,64 @@
   "emacspeak_002dido-Options"></span>
   <h4 class="subsection">12.107.1 emacspeak-ido Options</h4>
   <dl>
-    <dt id="index-User-Option-524">Variable: <strong>User
+    <dt id="index-User-Option-361">Variable: <strong>User
     Option</strong> <em>emacspeak-ido-typing-delay</em></dt>
     <dd>
       <p>How long we wait before speaking completions.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-362">Variable: <strong>User
+    Option</strong> <em>voice-ido-first-match</em></dt>
+    <dd>
+      <p>Personality used for ido-first-match This personality uses
+      voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-363">Variable: <strong>User
+    Option</strong> <em>voice-ido-incomplete-regexp</em></dt>
+    <dd>
+      <p>Personality used for ido-incomplete-regexp This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-364">Variable: <strong>User
+    Option</strong> <em>voice-ido-indicator</em></dt>
+    <dd>
+      <p>Personality used for ido-indicator This personality uses
+      voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-365">Variable: <strong>User
+    Option</strong> <em>voice-ido-only-match</em></dt>
+    <dd>
+      <p>Personality used for ido-only-match This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-366">Variable: <strong>User
+    Option</strong> <em>voice-ido-subdir</em></dt>
+    <dd>
+      <p>Personality used for ido-subdir This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-367">Variable: <strong>User
+    Option</strong> <em>voice-ido-virtual</em></dt>
+    <dd>
+      <p>Personality used for ido-virtual This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
     </dd>
   </dl>
 </body>
