--- a/manual/emacspeak_002divy.html
+++ b/manual/emacspeak_002divy.html
@@ -68,6 +68,121 @@
   <h3 class="section">12.113 emacspeak-ivy</h3>
   <p>IVY == One More Smart Completion Technique Speech-enable
   ivy-style completion. This is still experimental and
-  preliminary.</p>
+  preliminary.</p><span id="emacspeak_002divy-Options"></span>
+  <h4 class="subsection">12.113.1 emacspeak-ivy Options</h4>
+  <dl>
+    <dt id="index-User-Option-385">Variable: <strong>User
+    Option</strong> <em>voice-ivy-action</em></dt>
+    <dd>
+      <p>Personality used for ivy-action This personality uses
+      voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-386">Variable: <strong>User
+    Option</strong> <em>voice-ivy-current-match</em></dt>
+    <dd>
+      <p>Personality used for ivy-current-match This personality
+      uses voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-387">Variable: <strong>User
+    Option</strong> <em>voice-ivy-cursor</em></dt>
+    <dd>
+      <p>Personality used for ivy-cursor This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-388">Variable: <strong>User
+    Option</strong> <em>voice-ivy-minibuffer-match-face-1</em></dt>
+    <dd>
+      <p>Personality used for ivy-minibuffer-match-face-1 This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-389">Variable: <strong>User
+    Option</strong> <em>voice-ivy-minibuffer-match-face-2</em></dt>
+    <dd>
+      <p>Personality used for ivy-minibuffer-match-face-2 This
+      personality uses voice-monotone-medium whose effect can be
+      changed globally by customizing
+      voice-monotone-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-390">Variable: <strong>User
+    Option</strong> <em>voice-ivy-minibuffer-match-face-3</em></dt>
+    <dd>
+      <p>Personality used for ivy-minibuffer-match-face-3 This
+      personality uses voice-monotone-light whose effect can be
+      changed globally by customizing
+      voice-monotone-light-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-391">Variable: <strong>User
+    Option</strong> <em>voice-ivy-minibuffer-match-face-4</em></dt>
+    <dd>
+      <p>Personality used for ivy-minibuffer-match-face-4 This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-392">Variable: <strong>User
+    Option</strong> <em>voice-ivy-modified-buffer</em></dt>
+    <dd>
+      <p>Personality used for ivy-modified-buffer This personality
+      uses voice-bolden-and-animate whose effect can be changed
+      globally by customizing
+      voice-bolden-and-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-393">Variable: <strong>User
+    Option</strong> <em>voice-ivy-remote</em></dt>
+    <dd>
+      <p>Personality used for ivy-remote This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-394">Variable: <strong>User
+    Option</strong> <em>voice-ivy-subdir</em></dt>
+    <dd>
+      <p>Personality used for ivy-subdir This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-395">Variable: <strong>User
+    Option</strong> <em>voice-ivy-virtual</em></dt>
+    <dd>
+      <p>Personality used for ivy-virtual This personality uses
+      voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002djabber.html" accesskey="n" rel=
+    "next">emacspeak-jabber</a>, Previous: <a href=
+    "emacspeak_002dispell.html" accesskey="p" rel=
+    "prev">emacspeak-ispell</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
