--- a/manual/emacspeak_002djabber.html
+++ b/manual/emacspeak_002djabber.html
@@ -176,12 +176,167 @@ the kill ring as well.
   </dl><span id="emacspeak_002djabber-Options"></span>
   <h4 class="subsection">12.114.2 emacspeak-jabber Options</h4>
   <dl>
-    <dt id="index-User-Option-529">Variable: <strong>User
+    <dt id="index-User-Option-396">Variable: <strong>User
     Option</strong>
     <em>emacspeak-jabber-speak-presence-alerts</em></dt>
     <dd>
       <p>Set to T if you want to hear presence alerts.</p>
     </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-397">Variable: <strong>User
+    Option</strong> <em>voice-jabber-chat-error</em></dt>
+    <dd>
+      <p>Personality used for jabber-chat-error This personality
+      uses voice-bolden-and-animate whose effect can be changed
+      globally by customizing
+      voice-bolden-and-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-398">Variable: <strong>User
+    Option</strong> <em>voice-jabber-chat-prompt-foreign</em></dt>
+    <dd>
+      <p>Personality used for jabber-chat-prompt-foreign This
+      personality uses voice-brighten-medium whose effect can be
+      changed globally by customizing
+      voice-brighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-399">Variable: <strong>User
+    Option</strong> <em>voice-jabber-chat-prompt-local</em></dt>
+    <dd>
+      <p>Personality used for jabber-chat-prompt-local This
+      personality uses voice-smoothen-medium whose effect can be
+      changed globally by customizing
+      voice-smoothen-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-400">Variable: <strong>User
+    Option</strong> <em>voice-jabber-chat-prompt-system</em></dt>
+    <dd>
+      <p>Personality used for jabber-chat-prompt-system This
+      personality uses voice-brighten-extra whose effect can be
+      changed globally by customizing
+      voice-brighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-401">Variable: <strong>User
+    Option</strong> <em>voice-jabber-chat-text-local</em></dt>
+    <dd>
+      <p>Personality used for jabber-chat-text-local This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-402">Variable: <strong>User
+    Option</strong> <em>voice-jabber-roster-user-away</em></dt>
+    <dd>
+      <p>Personality used for jabber-roster-user-away This
+      personality uses voice-smoothen-extra whose effect can be
+      changed globally by customizing
+      voice-smoothen-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-403">Variable: <strong>User
+    Option</strong> <em>voice-jabber-roster-user-chatty</em></dt>
+    <dd>
+      <p>Personality used for jabber-roster-user-chatty This
+      personality uses voice-brighten whose effect can be changed
+      globally by customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-404">Variable: <strong>User
+    Option</strong> <em>voice-jabber-roster-user-dnd</em></dt>
+    <dd>
+      <p>Personality used for jabber-roster-user-dnd This
+      personality uses voice-lighten-medium whose effect can be
+      changed globally by customizing
+      voice-lighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-405">Variable: <strong>User
+    Option</strong> <em>voice-jabber-roster-user-error</em></dt>
+    <dd>
+      <p>Personality used for jabber-roster-user-error This
+      personality uses voice-bolden-and-animate whose effect can be
+      changed globally by customizing
+      voice-bolden-and-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-406">Variable: <strong>User
+    Option</strong> <em>voice-jabber-roster-user-offline</em></dt>
+    <dd>
+      <p>Personality used for jabber-roster-user-offline This
+      personality uses voice-smoothen-extra whose effect can be
+      changed globally by customizing
+      voice-smoothen-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-407">Variable: <strong>User
+    Option</strong> <em>voice-jabber-roster-user-online</em></dt>
+    <dd>
+      <p>Personality used for jabber-roster-user-online This
+      personality uses voice-bolden whose effect can be changed
+      globally by customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-408">Variable: <strong>User
+    Option</strong> <em>voice-jabber-roster-user-xa</em></dt>
+    <dd>
+      <p>Personality used for jabber-roster-user-xa This
+      personality uses voice-lighten whose effect can be changed
+      globally by customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-409">Variable: <strong>User
+    Option</strong> <em>voice-jabber-title-large</em></dt>
+    <dd>
+      <p>Personality used for jabber-title-large This personality
+      uses voice-bolden-extra whose effect can be changed globally
+      by customizing voice-bolden-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-410">Variable: <strong>User
+    Option</strong> <em>voice-jabber-title-medium</em></dt>
+    <dd>
+      <p>Personality used for jabber-title-medium This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-411">Variable: <strong>User
+    Option</strong> <em>voice-jabber-title-small</em></dt>
+    <dd>
+      <p>Personality used for jabber-title-small This personality
+      uses voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002djdee.html" accesskey="n" rel=
+    "next">emacspeak-jdee</a>, Previous: <a href=
+    "emacspeak_002divy.html" accesskey="p" rel=
+    "prev">emacspeak-ivy</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
