--- a/manual/emacspeak_002djs2.html
+++ b/manual/emacspeak_002djs2.html
@@ -68,6 +68,167 @@
   <h3 class="section">12.116 emacspeak-js2</h3>
   <p>JS2-mode http://js2-mode.googlecode.com/svn/trunk is a new,
   powerful Emacs mode for working with JavaScript. This module
-  speech-enables js2.</p>
+  speech-enables js2.</p><span id=
+  "emacspeak_002djs2-Options"></span>
+  <h4 class="subsection">12.116.1 emacspeak-js2 Options</h4>
+  <dl>
+    <dt id="index-User-Option-412">Variable: <strong>User
+    Option</strong> <em>voice-js2-error</em></dt>
+    <dd>
+      <p>Personality used for js2-error This personality uses
+      voice-bolden-extra whose effect can be changed globally by
+      customizing voice-bolden-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-413">Variable: <strong>User
+    Option</strong> <em>voice-js2-external-variable</em></dt>
+    <dd>
+      <p>Personality used for js2-external-variable This
+      personality uses voice-animate whose effect can be changed
+      globally by customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-414">Variable: <strong>User
+    Option</strong> <em>voice-js2-function-call</em></dt>
+    <dd>
+      <p>Personality used for js2-function-call This personality
+      uses voice-annotate whose effect can be changed globally by
+      customizing voice-annotate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-415">Variable: <strong>User
+    Option</strong> <em>voice-js2-function-param</em></dt>
+    <dd>
+      <p>Personality used for js2-function-param This personality
+      uses voice-lighten-extra whose effect can be changed globally
+      by customizing voice-lighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-416">Variable: <strong>User
+    Option</strong> <em>voice-js2-instance-member</em></dt>
+    <dd>
+      <p>Personality used for js2-instance-member This personality
+      uses voice-lighten-medium whose effect can be changed
+      globally by customizing voice-lighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-417">Variable: <strong>User
+    Option</strong>
+    <em>voice-js2-jsdoc-html-tag-delimiter</em></dt>
+    <dd>
+      <p>Personality used for js2-jsdoc-html-tag-delimiter This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-418">Variable: <strong>User
+    Option</strong> <em>voice-js2-jsdoc-html-tag-name</em></dt>
+    <dd>
+      <p>Personality used for js2-jsdoc-html-tag-name This
+      personality uses voice-bolden-medium whose effect can be
+      changed globally by customizing
+      voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-419">Variable: <strong>User
+    Option</strong> <em>voice-js2-jsdoc-tag</em></dt>
+    <dd>
+      <p>Personality used for js2-jsdoc-tag This personality uses
+      voice-bolden-medium whose effect can be changed globally by
+      customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-420">Variable: <strong>User
+    Option</strong> <em>voice-js2-jsdoc-type</em></dt>
+    <dd>
+      <p>Personality used for js2-jsdoc-type This personality uses
+      voice-smoothen-medium whose effect can be changed globally by
+      customizing voice-smoothen-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-421">Variable: <strong>User
+    Option</strong> <em>voice-js2-jsdoc-value</em></dt>
+    <dd>
+      <p>Personality used for js2-jsdoc-value This personality uses
+      voice-lighten-medium whose effect can be changed globally by
+      customizing voice-lighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-422">Variable: <strong>User
+    Option</strong> <em>voice-js2-magic-paren</em></dt>
+    <dd>
+      <p>Personality used for js2-magic-paren This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-423">Variable: <strong>User
+    Option</strong> <em>voice-js2-object-property</em></dt>
+    <dd>
+      <p>Personality used for js2-object-property This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-424">Variable: <strong>User
+    Option</strong> <em>voice-js2-object-property-access</em></dt>
+    <dd>
+      <p>Personality used for js2-object-property-access This
+      personality uses voice-lighten whose effect can be changed
+      globally by customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-425">Variable: <strong>User
+    Option</strong> <em>voice-js2-private-function-call</em></dt>
+    <dd>
+      <p>Personality used for js2-private-function-call This
+      personality uses voice-smoothen-extra whose effect can be
+      changed globally by customizing
+      voice-smoothen-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-426">Variable: <strong>User
+    Option</strong> <em>voice-js2-private-member</em></dt>
+    <dd>
+      <p>Personality used for js2-private-member This personality
+      uses voice-lighten-extra whose effect can be changed globally
+      by customizing voice-lighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-427">Variable: <strong>User
+    Option</strong> <em>voice-js2-warning</em></dt>
+    <dd>
+      <p>Personality used for js2-warning This personality uses
+      voice-bolden-and-animate whose effect can be changed globally
+      by customizing voice-bolden-and-animate-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002djss.html" accesskey="n" rel=
+    "next">emacspeak-jss</a>, Previous: <a href=
+    "emacspeak_002djdee.html" accesskey="p" rel=
+    "prev">emacspeak-jdee</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
