--- a/manual/emacspeak_002dman.html
+++ b/manual/emacspeak_002dman.html
@@ -101,6 +101,34 @@
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dman-Options"></span>
+  <h4 class="subsection">12.127.2 emacspeak-man Options</h4>
+  <dl>
+    <dt id="index-User-Option-569">Variable: <strong>User
+    Option</strong> <em>voice-Man-overstrike</em></dt>
+    <dd>
+      <p>Personality used for Man-overstrike This personality uses
+      voice-bolden-medium whose effect can be changed globally by
+      customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-570">Variable: <strong>User
+    Option</strong> <em>voice-Man-reverse</em></dt>
+    <dd>
+      <p>Personality used for Man-reverse This personality uses
+      voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-571">Variable: <strong>User
+    Option</strong> <em>voice-Man-underline</em></dt>
+    <dd>
+      <p>Personality used for Man-underline This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
   </dl>
 </body>
 </html>
