--- a/manual/emacspeak_002dmessage.html
+++ b/manual/emacspeak_002dmessage.html
@@ -70,12 +70,114 @@
   "emacspeak_002dmessage-Options"></span>
   <h4 class="subsection">12.130.1 emacspeak-message Options</h4>
   <dl>
-    <dt id="index-User-Option-678">Variable: <strong>User
+    <dt id="index-User-Option-579">Variable: <strong>User
     Option</strong>
     <em>emacspeak-message-punctuation-mode</em></dt>
     <dd>
       <p>Pronunciation mode to use for message buffers.</p>
     </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-580">Variable: <strong>User
+    Option</strong> <em>voice-message-cited-text</em></dt>
+    <dd>
+      <p>Personality used for message-cited-text This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-581">Variable: <strong>User
+    Option</strong> <em>voice-message-header-cc</em></dt>
+    <dd>
+      <p>Personality used for message-header-cc This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-582">Variable: <strong>User
+    Option</strong> <em>voice-message-header-name</em></dt>
+    <dd>
+      <p>Personality used for message-header-name This personality
+      uses voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-583">Variable: <strong>User
+    Option</strong> <em>voice-message-header-newsgroups</em></dt>
+    <dd>
+      <p>Personality used for message-header-newsgroups This
+      personality uses voice-bolden whose effect can be changed
+      globally by customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-584">Variable: <strong>User
+    Option</strong> <em>voice-message-header-other</em></dt>
+    <dd>
+      <p>Personality used for message-header-other This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-585">Variable: <strong>User
+    Option</strong> <em>voice-message-header-subject</em></dt>
+    <dd>
+      <p>Personality used for message-header-subject This
+      personality uses voice-bolden whose effect can be changed
+      globally by customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-586">Variable: <strong>User
+    Option</strong> <em>voice-message-header-to</em></dt>
+    <dd>
+      <p>Personality used for message-header-to This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-587">Variable: <strong>User
+    Option</strong> <em>voice-message-header-xheader</em></dt>
+    <dd>
+      <p>Personality used for message-header-xheader This
+      personality uses voice-bolden whose effect can be changed
+      globally by customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-588">Variable: <strong>User
+    Option</strong> <em>voice-message-mml</em></dt>
+    <dd>
+      <p>Personality used for message-mml This personality uses
+      voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-589">Variable: <strong>User
+    Option</strong> <em>voice-message-separator</em></dt>
+    <dd>
+      <p>Personality used for message-separator This personality
+      uses voice-bolden-extra whose effect can be changed globally
+      by customizing voice-bolden-extra-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002dmetapost.html" accesskey="n"
+    rel="next">emacspeak-metapost</a>, Previous: <a href=
+    "emacspeak_002dmaths.html" accesskey="p" rel=
+    "prev">emacspeak-maths</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
