--- a/manual/emacspeak_002dpackage.html
+++ b/manual/emacspeak_002dpackage.html
@@ -115,6 +115,150 @@
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dpackage-Options"></span>
+  <h4 class="subsection">12.147.2 emacspeak-package Options</h4>
+  <dl>
+    <dt id="index-User-Option-709">Variable: <strong>User
+    Option</strong> <em>voice-package-description</em></dt>
+    <dd>
+      <p>Personality used for package-description This personality
+      uses voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-710">Variable: <strong>User
+    Option</strong> <em>voice-package-help-section-name</em></dt>
+    <dd>
+      <p>Personality used for package-help-section-name This
+      personality uses voice-lighten whose effect can be changed
+      globally by customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-711">Variable: <strong>User
+    Option</strong> <em>voice-package-name</em></dt>
+    <dd>
+      <p>Personality used for package-name This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-712">Variable: <strong>User
+    Option</strong> <em>voice-package-status-avail-obso</em></dt>
+    <dd>
+      <p>Personality used for package-status-avail-obso This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-713">Variable: <strong>User
+    Option</strong> <em>voice-package-status-available</em></dt>
+    <dd>
+      <p>Personality used for package-status-available This
+      personality uses voice-annotate whose effect can be changed
+      globally by customizing voice-annotate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-714">Variable: <strong>User
+    Option</strong> <em>voice-package-status-built-in</em></dt>
+    <dd>
+      <p>Personality used for package-status-built-in This
+      personality uses voice-monotone-medium whose effect can be
+      changed globally by customizing
+      voice-monotone-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-715">Variable: <strong>User
+    Option</strong> <em>voice-package-status-dependency</em></dt>
+    <dd>
+      <p>Personality used for package-status-dependency This
+      personality uses voice-monotone-medium whose effect can be
+      changed globally by customizing
+      voice-monotone-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-716">Variable: <strong>User
+    Option</strong> <em>voice-package-status-disabled</em></dt>
+    <dd>
+      <p>Personality used for package-status-disabled This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-717">Variable: <strong>User
+    Option</strong> <em>voice-package-status-external</em></dt>
+    <dd>
+      <p>Personality used for package-status-external This
+      personality uses voice-animate whose effect can be changed
+      globally by customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-718">Variable: <strong>User
+    Option</strong> <em>voice-package-status-held</em></dt>
+    <dd>
+      <p>Personality used for package-status-held This personality
+      uses voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-719">Variable: <strong>User
+    Option</strong> <em>voice-package-status-incompat</em></dt>
+    <dd>
+      <p>Personality used for package-status-incompat This
+      personality uses voice-animate-extra whose effect can be
+      changed globally by customizing
+      voice-animate-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-720">Variable: <strong>User
+    Option</strong> <em>voice-package-status-installed</em></dt>
+    <dd>
+      <p>Personality used for package-status-installed This
+      personality uses voice-lighten-extra whose effect can be
+      changed globally by customizing
+      voice-lighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-721">Variable: <strong>User
+    Option</strong> <em>voice-package-status-new</em></dt>
+    <dd>
+      <p>Personality used for package-status-new This personality
+      uses voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-722">Variable: <strong>User
+    Option</strong> <em>voice-package-status-unsigned</em></dt>
+    <dd>
+      <p>Personality used for package-status-unsigned This
+      personality uses voice-animate-extra whose effect can be
+      changed globally by customizing
+      voice-animate-extra-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002dparadox.html" accesskey="n"
+    rel="next">emacspeak-paradox</a>, Previous: <a href=
+    "emacspeak_002doutline.html" accesskey="p" rel=
+    "prev">emacspeak-outline</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
