--- a/manual/emacspeak_002dwidget.html
+++ b/manual/emacspeak_002dwidget.html
@@ -161,6 +161,74 @@ widget before summarizing.
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dwidget-Options"></span>
+  <h4 class="subsection">12.223.2 emacspeak-widget Options</h4>
+  <dl>
+    <dt id="index-User-Option-851">Variable: <strong>User
+    Option</strong> <em>voice-widget-button</em></dt>
+    <dd>
+      <p>Personality used for widget-button This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-852">Variable: <strong>User
+    Option</strong> <em>voice-widget-button-pressed</em></dt>
+    <dd>
+      <p>Personality used for widget-button-pressed This
+      personality uses voice-bolden-extra whose effect can be
+      changed globally by customizing
+      voice-bolden-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-853">Variable: <strong>User
+    Option</strong> <em>voice-widget-documentation</em></dt>
+    <dd>
+      <p>Personality used for widget-documentation This personality
+      uses voice-smoothen-extra whose effect can be changed
+      globally by customizing voice-smoothen-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-854">Variable: <strong>User
+    Option</strong> <em>voice-widget-field</em></dt>
+    <dd>
+      <p>Personality used for widget-field This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-855">Variable: <strong>User
+    Option</strong> <em>voice-widget-inactive</em></dt>
+    <dd>
+      <p>Personality used for widget-inactive This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-856">Variable: <strong>User
+    Option</strong> <em>voice-widget-single-line-field</em></dt>
+    <dd>
+      <p>Personality used for widget-single-line-field This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002dwindmove.html" accesskey="n"
+    rel="next">emacspeak-windmove</a>, Previous: <a href=
+    "emacspeak_002dwebutils.html" accesskey="p" rel=
+    "prev">emacspeak-webutils</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
