--- a/manual/index.html
+++ b/manual/index.html
@@ -1064,10 +1064,17 @@
               </li>
             </ul>
           </li>
-          <li><a id="toc-emacspeak_002dauctex-1" href=
-          "emacspeak_002dauctex.html#emacspeak_002dauctex" name=
-          "toc-emacspeak_002dauctex-1">12.20
-          emacspeak-auctex</a></li>
+          <li>
+            <a id="toc-emacspeak_002dauctex-1" href=
+            "emacspeak_002dauctex.html#emacspeak_002dauctex" name=
+            "toc-emacspeak_002dauctex-1">12.20 emacspeak-auctex</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002dauctex-Options" href=
+              "emacspeak_002dauctex.html#emacspeak_002dauctex-Options"
+              name="toc-emacspeak_002dauctex-Options">12.20.1
+              emacspeak-auctex Options</a></li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002dbbc-1" href=
             "emacspeak_002dbbc.html#emacspeak_002dbbc" name=
@@ -1558,6 +1565,12 @@
                   emacspeak-list-buffers-speak-buffer-name</a></li>
                 </ul>
               </li>
+              <li><a id="toc-emacspeak_002dbuff_002dmenu-Options"
+              href=
+              "emacspeak_002dbuff_002dmenu.html#emacspeak_002dbuff_002dmenu-Options"
+              name=
+              "toc-emacspeak_002dbuff_002dmenu-Options">12.28.2
+              emacspeak-buff-menu Options</a></li>
             </ul>
           </li>
           <li>
@@ -1933,6 +1946,10 @@
                   emacspeak-custom-goto-toolbar</a></li>
                 </ul>
               </li>
+              <li><a id="toc-emacspeak_002dcustom-Options" href=
+              "emacspeak_002dcustom.html#emacspeak_002dcustom-Options"
+              name="toc-emacspeak_002dcustom-Options">12.43.2
+              emacspeak-custom Options</a></li>
             </ul>
           </li>
           <li>
@@ -2024,10 +2041,20 @@
           "emacspeak_002ddictionary.html#emacspeak_002ddictionary"
           name="toc-emacspeak_002ddictionary-1">12.48
           emacspeak-dictionary</a></li>
-          <li><a id="toc-emacspeak_002ddiff_002dmode-1" href=
-          "emacspeak_002ddiff_002dmode.html#emacspeak_002ddiff_002dmode"
-          name="toc-emacspeak_002ddiff_002dmode-1">12.49
-          emacspeak-diff-mode</a></li>
+          <li>
+            <a id="toc-emacspeak_002ddiff_002dmode-1" href=
+            "emacspeak_002ddiff_002dmode.html#emacspeak_002ddiff_002dmode"
+            name="toc-emacspeak_002ddiff_002dmode-1">12.49
+            emacspeak-diff-mode</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002ddiff_002dmode-Options"
+              href=
+              "emacspeak_002ddiff_002dmode.html#emacspeak_002ddiff_002dmode-Options"
+              name=
+              "toc-emacspeak_002ddiff_002dmode-Options">12.49.1
+              emacspeak-diff-mode Options</a></li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002ddired-1" href=
             "emacspeak_002ddired.html#emacspeak_002ddired" name=
@@ -2389,6 +2416,10 @@
                   emacspeak-ediff-speak-current-difference</a></li>
                 </ul>
               </li>
+              <li><a id="toc-emacspeak_002dediff-Options" href=
+              "emacspeak_002dediff.html#emacspeak_002dediff-Options"
+              name="toc-emacspeak_002dediff-Options">12.56.2
+              emacspeak-ediff Options</a></li>
             </ul>
           </li>
           <li>
@@ -2576,9 +2607,17 @@
               emacspeak-entertain Options</a></li>
             </ul>
           </li>
-          <li><a id="toc-emacspeak_002depa-1" href=
-          "emacspeak_002depa.html#emacspeak_002depa" name=
-          "toc-emacspeak_002depa-1">12.66 emacspeak-epa</a></li>
+          <li>
+            <a id="toc-emacspeak_002depa-1" href=
+            "emacspeak_002depa.html#emacspeak_002depa" name=
+            "toc-emacspeak_002depa-1">12.66 emacspeak-epa</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002depa-Options" href=
+              "emacspeak_002depa.html#emacspeak_002depa-Options"
+              name="toc-emacspeak_002depa-Options">12.66.1
+              emacspeak-epa Options</a></li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002deperiodic-1" href=
             "emacspeak_002deperiodic.html#emacspeak_002deperiodic"
@@ -4806,9 +4845,17 @@
               emacspeak-ispell Options</a></li>
             </ul>
           </li>
-          <li><a id="toc-emacspeak_002divy-1" href=
-          "emacspeak_002divy.html#emacspeak_002divy" name=
-          "toc-emacspeak_002divy-1">12.113 emacspeak-ivy</a></li>
+          <li>
+            <a id="toc-emacspeak_002divy-1" href=
+            "emacspeak_002divy.html#emacspeak_002divy" name=
+            "toc-emacspeak_002divy-1">12.113 emacspeak-ivy</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002divy-Options" href=
+              "emacspeak_002divy.html#emacspeak_002divy-Options"
+              name="toc-emacspeak_002divy-Options">12.113.1
+              emacspeak-ivy Options</a></li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002djabber-1" href=
             "emacspeak_002djabber.html#emacspeak_002djabber" name=
@@ -4871,9 +4918,17 @@
           <li><a id="toc-emacspeak_002djdee-1" href=
           "emacspeak_002djdee.html#emacspeak_002djdee" name=
           "toc-emacspeak_002djdee-1">12.115 emacspeak-jdee</a></li>
-          <li><a id="toc-emacspeak_002djs2-1" href=
-          "emacspeak_002djs2.html#emacspeak_002djs2" name=
-          "toc-emacspeak_002djs2-1">12.116 emacspeak-js2</a></li>
+          <li>
+            <a id="toc-emacspeak_002djs2-1" href=
+            "emacspeak_002djs2.html#emacspeak_002djs2" name=
+            "toc-emacspeak_002djs2-1">12.116 emacspeak-js2</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002djs2-Options" href=
+              "emacspeak_002djs2.html#emacspeak_002djs2-Options"
+              name="toc-emacspeak_002djs2-Options">12.116.1
+              emacspeak-js2 Options</a></li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002djss-1" href=
             "emacspeak_002djss.html#emacspeak_002djss" name=
@@ -5685,6 +5740,10 @@
                   emacspeak-man-speak-this-section</a></li>
                 </ul>
               </li>
+              <li><a id="toc-emacspeak_002dman-Options" href=
+              "emacspeak_002dman.html#emacspeak_002dman-Options"
+              name="toc-emacspeak_002dman-Options">12.127.2
+              emacspeak-man Options</a></li>
             </ul>
           </li>
           <li>
@@ -6472,6 +6531,10 @@
                   emacspeak-package-summarize-line</a></li>
                 </ul>
               </li>
+              <li><a id="toc-emacspeak_002dpackage-Options" href=
+              "emacspeak_002dpackage.html#emacspeak_002dpackage-Options"
+              name="toc-emacspeak_002dpackage-Options">12.147.2
+              emacspeak-package Options</a></li>
             </ul>
           </li>
           <li>
@@ -7167,10 +7230,19 @@
           "emacspeak_002dsmart_002dwindow.html#emacspeak_002dsmart_002dwindow"
           name="toc-emacspeak_002dsmart_002dwindow-1">12.185
           emacspeak-smart-window</a></li>
-          <li><a id="toc-emacspeak_002dsmartparens-1" href=
-          "emacspeak_002dsmartparens.html#emacspeak_002dsmartparens"
-          name="toc-emacspeak_002dsmartparens-1">12.186
-          emacspeak-smartparens</a></li>
+          <li>
+            <a id="toc-emacspeak_002dsmartparens-1" href=
+            "emacspeak_002dsmartparens.html#emacspeak_002dsmartparens"
+            name="toc-emacspeak_002dsmartparens-1">12.186
+            emacspeak-smartparens</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002dsmartparens-Options"
+              href=
+              "emacspeak_002dsmartparens.html#emacspeak_002dsmartparens-Options"
+              name="toc-emacspeak_002dsmartparens-Options">12.186.1
+              emacspeak-smartparens Options</a></li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002dsolitaire-1" href=
             "emacspeak_002dsolitaire.html#emacspeak_002dsolitaire"
@@ -8430,10 +8502,19 @@
               emacspeak-syslog Options</a></li>
             </ul>
           </li>
-          <li><a id="toc-emacspeak_002dtab_002dbar-1" href=
-          "emacspeak_002dtab_002dbar.html#emacspeak_002dtab_002dbar"
-          name="toc-emacspeak_002dtab_002dbar-1">12.195
-          emacspeak-tab-bar</a></li>
+          <li>
+            <a id="toc-emacspeak_002dtab_002dbar-1" href=
+            "emacspeak_002dtab_002dbar.html#emacspeak_002dtab_002dbar"
+            name="toc-emacspeak_002dtab_002dbar-1">12.195
+            emacspeak-tab-bar</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002dtab_002dbar-Options"
+              href=
+              "emacspeak_002dtab_002dbar.html#emacspeak_002dtab_002dbar-Options"
+              name="toc-emacspeak_002dtab_002dbar-Options">12.195.1
+              emacspeak-tab-bar Options</a></li>
+            </ul>
+          </li>
           <li><a id="toc-emacspeak_002dtable-1" href=
           "emacspeak_002dtable.html#emacspeak_002dtable" name=
           "toc-emacspeak_002dtable-1">12.196
@@ -10109,6 +10190,10 @@
                   emacspeak-widget-update-from-minibuffer</a></li>
                 </ul>
               </li>
+              <li><a id="toc-emacspeak_002dwidget-Options" href=
+              "emacspeak_002dwidget.html#emacspeak_002dwidget-Options"
+              name="toc-emacspeak_002dwidget-Options">12.223.2
+              emacspeak-widget Options</a></li>
             </ul>
           </li>
           <li><a id="toc-emacspeak_002dwindmove-1" href=
@@ -11365,10 +11450,17 @@
               emacspeak-wizards Options</a></li>
             </ul>
           </li>
-          <li><a id="toc-emacspeak_002dwoman-1" href=
-          "emacspeak_002dwoman.html#emacspeak_002dwoman" name=
-          "toc-emacspeak_002dwoman-1">12.227
-          emacspeak-woman</a></li>
+          <li>
+            <a id="toc-emacspeak_002dwoman-1" href=
+            "emacspeak_002dwoman.html#emacspeak_002dwoman" name=
+            "toc-emacspeak_002dwoman-1">12.227 emacspeak-woman</a>
+            <ul class="no-bullet">
+              <li><a id="toc-emacspeak_002dwoman-Options" href=
+              "emacspeak_002dwoman.html#emacspeak_002dwoman-Options"
+              name="toc-emacspeak_002dwoman-Options">12.227.1
+              emacspeak-woman Options</a></li>
+            </ul>
+          </li>
           <li>
             <a id="toc-emacspeak_002dxkcd-1" href=
             "emacspeak_002dxkcd.html#emacspeak_002dxkcd" name=
