--- a/manual/emacspeak_002dadvice.html
+++ b/manual/emacspeak_002dadvice.html
@@ -102,7 +102,7 @@
   </dl><span id="emacspeak_002dadvice-Options"></span>
   <h4 class="subsection">12.14.2 emacspeak-advice Options</h4>
   <dl>
-    <dt id="index-User-Option-404">Variable: <strong>User
+    <dt id="index-User-Option-75">Variable: <strong>User
     Option</strong>
     <em>emacspeak-advice-progress-reporter</em></dt>
     <dd>
@@ -111,7 +111,7 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-405">Variable: <strong>User
+    <dt id="index-User-Option-76">Variable: <strong>User
     Option</strong> <em>emacspeak-replace-personality</em></dt>
     <dd>
       <p>Personality used in search and replace to indicate word
@@ -119,21 +119,21 @@
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-406">Variable: <strong>User
+    <dt id="index-User-Option-77">Variable: <strong>User
     Option</strong> <em>emacspeak-speak-errors</em></dt>
     <dd>
       <p>Specifies if error messages are cued.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-407">Variable: <strong>User
+    <dt id="index-User-Option-78">Variable: <strong>User
     Option</strong> <em>emacspeak-speak-tooltips</em></dt>
     <dd>
       <p>Enable to get tooltips spoken.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-408">Variable: <strong>User
+    <dt id="index-User-Option-79">Variable: <strong>User
     Option</strong>
     <em>emacspeak-untabify-fixes-non-breaking-space</em></dt>
     <dd>
@@ -141,5 +141,109 @@
       space.</p>
     </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-80">Variable: <strong>User
+    Option</strong> <em>voice-comint-highlight-input</em></dt>
+    <dd>
+      <p>Personality used for comint-highlight-input This
+      personality uses voice-bolden whose effect can be changed
+      globally by customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-81">Variable: <strong>User
+    Option</strong> <em>voice-comint-highlight-prompt</em></dt>
+    <dd>
+      <p>Personality used for comint-highlight-prompt This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-82">Variable: <strong>User
+    Option</strong> <em>voice-completions-annotations</em></dt>
+    <dd>
+      <p>Personality used for completions-annotations This
+      personality uses voice-annotate whose effect can be changed
+      globally by customizing voice-annotate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-83">Variable: <strong>User
+    Option</strong> <em>voice-completions-common-part</em></dt>
+    <dd>
+      <p>Personality used for completions-common-part This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-84">Variable: <strong>User
+    Option</strong>
+    <em>voice-completions-first-difference</em></dt>
+    <dd>
+      <p>Personality used for completions-first-difference This
+      personality uses voice-brighten whose effect can be changed
+      globally by customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-85">Variable: <strong>User
+    Option</strong>
+    <em>voice-eldoc-highlight-function-argument</em></dt>
+    <dd>
+      <p>Personality used for eldoc-highlight-function-argument
+      This personality uses voice-bolden whose effect can be
+      changed globally by customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-86">Variable: <strong>User
+    Option</strong> <em>voice-log-edit-header</em></dt>
+    <dd>
+      <p>Personality used for log-edit-header This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-87">Variable: <strong>User
+    Option</strong> <em>voice-log-edit-summary</em></dt>
+    <dd>
+      <p>Personality used for log-edit-summary This personality
+      uses voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-88">Variable: <strong>User
+    Option</strong> <em>voice-log-edit-unknown-header</em></dt>
+    <dd>
+      <p>Personality used for log-edit-unknown-header This
+      personality uses voice-monotone whose effect can be changed
+      globally by customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-89">Variable: <strong>User
+    Option</strong> <em>voice-minibuffer-prompt</em></dt>
+    <dd>
+      <p>Personality used for minibuffer-prompt This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002damark.html" accesskey="n" rel=
+    "next">emacspeak-amark</a>, Previous: <a href=
+    "emacspeak_002dadd_002dlog.html" accesskey="p" rel=
+    "prev">emacspeak-add-log</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
