--- a/manual/emacspeak_002dbuff_002dmenu.html
+++ b/manual/emacspeak_002dbuff_002dmenu.html
@@ -145,6 +145,16 @@
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dbuff_002dmenu-Options"></span>
+  <h4 class="subsection">12.28.2 emacspeak-buff-menu Options</h4>
+  <dl>
+    <dt id="index-User-Option-111">Variable: <strong>User
+    Option</strong> <em>voice-buffer-menu-buffer</em></dt>
+    <dd>
+      <p>Personality used for buffer-menu-buffer This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
   </dl>
 </body>
 </html>
