--- a/manual/emacspeak_002dcalendar.html
+++ b/manual/emacspeak_002dcalendar.html
@@ -132,12 +132,39 @@ To use, configure variable gweb-my-address via M-x customize-variable.
   </dl><span id="emacspeak_002dcalendar-Options"></span>
   <h4 class="subsection">12.32.2 emacspeak-calendar Options</h4>
   <dl>
-    <dt id="index-User-Option-419">Variable: <strong>User
+    <dt id="index-User-Option-112">Variable: <strong>User
     Option</strong>
     <em>emacspeak-calendar-mark-personality</em></dt>
     <dd>
       <p>Personality to use when showing marked calendar
       entries.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-113">Variable: <strong>User
+    Option</strong> <em>voice-calendar-today</em></dt>
+    <dd>
+      <p>Personality used for calendar-today This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-114">Variable: <strong>User
+    Option</strong> <em>voice-diary</em></dt>
+    <dd>
+      <p>Personality used for diary This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-115">Variable: <strong>User
+    Option</strong> <em>voice-holiday</em></dt>
+    <dd>
+      <p>Personality used for holiday This personality uses
+      voice-brighten-extra whose effect can be changed globally by
+      customizing voice-brighten-extra-settings.</p>
     </dd>
   </dl>
 </body>
