--- a/manual/emacspeak_002dcustom.html
+++ b/manual/emacspeak_002dcustom.html
@@ -101,6 +101,238 @@
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dcustom-Options"></span>
+  <h4 class="subsection">12.43.2 emacspeak-custom Options</h4>
+  <dl>
+    <dt id="index-User-Option-131">Variable: <strong>User
+    Option</strong> <em>voice-custom-button</em></dt>
+    <dd>
+      <p>Personality used for custom-button This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-132">Variable: <strong>User
+    Option</strong> <em>voice-custom-button-mouse</em></dt>
+    <dd>
+      <p>Personality used for custom-button-mouse This personality
+      uses voice-bolden-medium whose effect can be changed globally
+      by customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-133">Variable: <strong>User
+    Option</strong> <em>voice-custom-button-pressed</em></dt>
+    <dd>
+      <p>Personality used for custom-button-pressed This
+      personality uses voice-bolden-extra whose effect can be
+      changed globally by customizing
+      voice-bolden-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-134">Variable: <strong>User
+    Option</strong>
+    <em>voice-custom-button-pressed-unraised</em></dt>
+    <dd>
+      <p>Personality used for custom-button-pressed-unraised This
+      personality uses voice-bolden-extra whose effect can be
+      changed globally by customizing
+      voice-bolden-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-135">Variable: <strong>User
+    Option</strong> <em>voice-custom-button-unraised</em></dt>
+    <dd>
+      <p>Personality used for custom-button-unraised This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-136">Variable: <strong>User
+    Option</strong> <em>voice-custom-changed</em></dt>
+    <dd>
+      <p>Personality used for custom-changed This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-137">Variable: <strong>User
+    Option</strong> <em>voice-custom-comment</em></dt>
+    <dd>
+      <p>Personality used for custom-comment This personality uses
+      voice-monotone-medium whose effect can be changed globally by
+      customizing voice-monotone-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-138">Variable: <strong>User
+    Option</strong> <em>voice-custom-comment-tag</em></dt>
+    <dd>
+      <p>Personality used for custom-comment-tag This personality
+      uses voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-139">Variable: <strong>User
+    Option</strong> <em>voice-custom-documentation</em></dt>
+    <dd>
+      <p>Personality used for custom-documentation This personality
+      uses voice-brighten-medium whose effect can be changed
+      globally by customizing voice-brighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-140">Variable: <strong>User
+    Option</strong> <em>voice-custom-face-tag</em></dt>
+    <dd>
+      <p>Personality used for custom-face-tag This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-141">Variable: <strong>User
+    Option</strong> <em>voice-custom-group-subtitle</em></dt>
+    <dd>
+      <p>Personality used for custom-group-subtitle This
+      personality uses voice-smoothen whose effect can be changed
+      globally by customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-142">Variable: <strong>User
+    Option</strong> <em>voice-custom-group-tag</em></dt>
+    <dd>
+      <p>Personality used for custom-group-tag This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-143">Variable: <strong>User
+    Option</strong> <em>voice-custom-group-tag-1</em></dt>
+    <dd>
+      <p>Personality used for custom-group-tag-1 This personality
+      uses voice-lighten-medium whose effect can be changed
+      globally by customizing voice-lighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-144">Variable: <strong>User
+    Option</strong> <em>voice-custom-invalid</em></dt>
+    <dd>
+      <p>Personality used for custom-invalid This personality uses
+      voice-animate-extra whose effect can be changed globally by
+      customizing voice-animate-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-145">Variable: <strong>User
+    Option</strong> <em>voice-custom-link</em></dt>
+    <dd>
+      <p>Personality used for custom-link This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-146">Variable: <strong>User
+    Option</strong> <em>voice-custom-modified</em></dt>
+    <dd>
+      <p>Personality used for custom-modified This personality uses
+      voice-lighten-medium whose effect can be changed globally by
+      customizing voice-lighten-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-147">Variable: <strong>User
+    Option</strong> <em>voice-custom-rogue</em></dt>
+    <dd>
+      <p>Personality used for custom-rogue This personality uses
+      voice-bolden-and-animate whose effect can be changed globally
+      by customizing voice-bolden-and-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-148">Variable: <strong>User
+    Option</strong> <em>voice-custom-saved</em></dt>
+    <dd>
+      <p>Personality used for custom-saved This personality uses
+      voice-smoothen-extra whose effect can be changed globally by
+      customizing voice-smoothen-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-149">Variable: <strong>User
+    Option</strong> <em>voice-custom-set</em></dt>
+    <dd>
+      <p>Personality used for custom-set This personality uses
+      voice-smoothen-medium whose effect can be changed globally by
+      customizing voice-smoothen-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-150">Variable: <strong>User
+    Option</strong> <em>voice-custom-state</em></dt>
+    <dd>
+      <p>Personality used for custom-state This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-151">Variable: <strong>User
+    Option</strong> <em>voice-custom-themed</em></dt>
+    <dd>
+      <p>Personality used for custom-themed This personality uses
+      voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-152">Variable: <strong>User
+    Option</strong> <em>voice-custom-variable-button</em></dt>
+    <dd>
+      <p>Personality used for custom-variable-button This
+      personality uses voice-animate whose effect can be changed
+      globally by customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-153">Variable: <strong>User
+    Option</strong> <em>voice-custom-variable-tag</em></dt>
+    <dd>
+      <p>Personality used for custom-variable-tag This personality
+      uses voice-bolden-medium whose effect can be changed globally
+      by customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-154">Variable: <strong>User
+    Option</strong> <em>voice-custom-visibility</em></dt>
+    <dd>
+      <p>Personality used for custom-visibility This personality
+      uses voice-annotate whose effect can be changed globally by
+      customizing voice-annotate-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002ddbus.html" accesskey="n" rel=
+    "next">emacspeak-dbus</a>, Previous: <a href=
+    "emacspeak_002dcperl.html" accesskey="p" rel=
+    "prev">emacspeak-cperl</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
