--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -362,10 +362,109 @@ Optional interactive prefix arg shuffles playlist.
   </dl><span id="emacspeak_002ddired-Options"></span>
   <h4 class="subsection">12.50.2 emacspeak-dired Options</h4>
   <dl>
-    <dt id="index-User-Option-435">Variable: <strong>User
+    <dt id="index-User-Option-171">Variable: <strong>User
     Option</strong> <em>emacspeak-dired-file-cmd-options</em></dt>
     <dd>
       <p>Options passed to Unix builtin ‘file’ command.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-172">Variable: <strong>User
+    Option</strong> <em>voice-dired-directory</em></dt>
+    <dd>
+      <p>Personality used for dired-directory This personality uses
+      voice-bolden-medium whose effect can be changed globally by
+      customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-173">Variable: <strong>User
+    Option</strong> <em>voice-dired-flagged</em></dt>
+    <dd>
+      <p>Personality used for dired-flagged This personality uses
+      voice-animate-extra whose effect can be changed globally by
+      customizing voice-animate-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-174">Variable: <strong>User
+    Option</strong> <em>voice-dired-header</em></dt>
+    <dd>
+      <p>Personality used for dired-header This personality uses
+      voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-175">Variable: <strong>User
+    Option</strong> <em>voice-dired-ignored</em></dt>
+    <dd>
+      <p>Personality used for dired-ignored This personality uses
+      voice-lighten-extra whose effect can be changed globally by
+      customizing voice-lighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-176">Variable: <strong>User
+    Option</strong> <em>voice-dired-mark</em></dt>
+    <dd>
+      <p>Personality used for dired-mark This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-177">Variable: <strong>User
+    Option</strong> <em>voice-dired-marked</em></dt>
+    <dd>
+      <p>Personality used for dired-marked This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-178">Variable: <strong>User
+    Option</strong> <em>voice-dired-perm-write</em></dt>
+    <dd>
+      <p>Personality used for dired-perm-write This personality
+      uses voice-lighten-extra whose effect can be changed globally
+      by customizing voice-lighten-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-179">Variable: <strong>User
+    Option</strong> <em>voice-dired-set-id</em></dt>
+    <dd>
+      <p>Personality used for dired-set-id This personality uses
+      voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-180">Variable: <strong>User
+    Option</strong> <em>voice-dired-special</em></dt>
+    <dd>
+      <p>Personality used for dired-special This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-181">Variable: <strong>User
+    Option</strong> <em>voice-dired-symlink</em></dt>
+    <dd>
+      <p>Personality used for dired-symlink This personality uses
+      voice-animate-extra whose effect can be changed globally by
+      customizing voice-animate-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-182">Variable: <strong>User
+    Option</strong> <em>voice-dired-warning</em></dt>
+    <dd>
+      <p>Personality used for dired-warning This personality uses
+      voice-animate-extra whose effect can be changed globally by
+      customizing voice-animate-extra-settings.</p>
     </dd>
   </dl>
   <hr />
