--- a/manual/emacspeak_002determ.html
+++ b/manual/emacspeak_002determ.html
@@ -836,14 +836,14 @@ all output to the terminal is automatically spoken.
   </dl><span id="emacspeak_002determ-Options"></span>
   <h4 class="subsection">12.73.2 emacspeak-eterm Options</h4>
   <dl>
-    <dt id="index-User-Option-478">Variable: <strong>User
+    <dt id="index-User-Option-249">Variable: <strong>User
     Option</strong> <em>emacspeak-eterm-bold-personality</em></dt>
     <dd>
       <p>Personality to indicate terminal bold.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-479">Variable: <strong>User
+    <dt id="index-User-Option-250">Variable: <strong>User
     Option</strong>
     <em>emacspeak-eterm-default-personality</em></dt>
     <dd>
@@ -851,7 +851,7 @@ all output to the terminal is automatically spoken.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-480">Variable: <strong>User
+    <dt id="index-User-Option-251">Variable: <strong>User
     Option</strong>
     <em>emacspeak-eterm-highlight-personality</em></dt>
     <dd>
@@ -859,7 +859,7 @@ all output to the terminal is automatically spoken.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-481">Variable: <strong>User
+    <dt id="index-User-Option-252">Variable: <strong>User
     Option</strong>
     <em>emacspeak-eterm-remote-hosts-cache</em></dt>
     <dd>
@@ -867,11 +867,20 @@ all output to the terminal is automatically spoken.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-482">Variable: <strong>User
+    <dt id="index-User-Option-253">Variable: <strong>User
     Option</strong>
     <em>emacspeak-eterm-underline-personality</em></dt>
     <dd>
       <p>Personality to indicate terminal underlining.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-254">Variable: <strong>User
+    Option</strong> <em>voice-term-underline</em></dt>
+    <dd>
+      <p>Personality used for term-underline This personality uses
+      voice-brighten-medium whose effect can be changed globally by
+      customizing voice-brighten-medium-settings.</p>
     </dd>
   </dl>
   <hr />
