--- a/manual/emacspeak_002dflyspell.html
+++ b/manual/emacspeak_002dflyspell.html
@@ -84,10 +84,28 @@
   "emacspeak_002dflyspell-Options"></span>
   <h4 class="subsection">12.85.1 emacspeak-flyspell Options</h4>
   <dl>
-    <dt id="index-User-Option-510">Variable: <strong>User
+    <dt id="index-User-Option-292">Variable: <strong>User
     Option</strong> <em>emacspeak-flyspell-correct</em></dt>
     <dd>
       <p>Correction style to use with flyspell.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-293">Variable: <strong>User
+    Option</strong> <em>voice-flyspell-duplicate</em></dt>
+    <dd>
+      <p>Personality used for flyspell-duplicate This personality
+      uses voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-294">Variable: <strong>User
+    Option</strong> <em>voice-flyspell-incorrect</em></dt>
+    <dd>
+      <p>Personality used for flyspell-incorrect This personality
+      uses voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
     </dd>
   </dl>
 </body>
