--- a/manual/emacspeak_002dinfo.html
+++ b/manual/emacspeak_002dinfo.html
@@ -144,7 +144,7 @@ node-spec.
   </dl><span id="emacspeak_002dinfo-Options"></span>
   <h4 class="subsection">12.111.2 emacspeak-info Options</h4>
   <dl>
-    <dt id="index-User-Option-527">Variable: <strong>User
+    <dt id="index-User-Option-370">Variable: <strong>User
     Option</strong>
     <em>emacspeak-info-select-node-speak-chunk</em></dt>
     <dd>
@@ -153,5 +153,134 @@ node-spec.
       node – speak the entire node.</p>
     </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-371">Variable: <strong>User
+    Option</strong> <em>voice-Info-quoted</em></dt>
+    <dd>
+      <p>Personality used for Info-quoted This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-372">Variable: <strong>User
+    Option</strong> <em>voice-info-header-node</em></dt>
+    <dd>
+      <p>Personality used for info-header-node This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-373">Variable: <strong>User
+    Option</strong> <em>voice-info-header-xref</em></dt>
+    <dd>
+      <p>Personality used for info-header-xref This personality
+      uses voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-374">Variable: <strong>User
+    Option</strong> <em>voice-info-index-match</em></dt>
+    <dd>
+      <p>Personality used for info-index-match This personality
+      uses ’voice-bolden-medium whose effect can be changed
+      globally by customizing ’voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-375">Variable: <strong>User
+    Option</strong> <em>voice-info-menu-header</em></dt>
+    <dd>
+      <p>Personality used for info-menu-header This personality
+      uses voice-bolden-medium whose effect can be changed globally
+      by customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-376">Variable: <strong>User
+    Option</strong> <em>voice-info-menu-star</em></dt>
+    <dd>
+      <p>Personality used for info-menu-star This personality uses
+      voice-brighten whose effect can be changed globally by
+      customizing voice-brighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-377">Variable: <strong>User
+    Option</strong> <em>voice-info-node</em></dt>
+    <dd>
+      <p>Personality used for info-node This personality uses
+      voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-378">Variable: <strong>User
+    Option</strong> <em>voice-info-title-1</em></dt>
+    <dd>
+      <p>Personality used for info-title-1 This personality uses
+      voice-bolden-extra whose effect can be changed globally by
+      customizing voice-bolden-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-379">Variable: <strong>User
+    Option</strong> <em>voice-info-title-2</em></dt>
+    <dd>
+      <p>Personality used for info-title-2 This personality uses
+      voice-bolden-medium whose effect can be changed globally by
+      customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-380">Variable: <strong>User
+    Option</strong> <em>voice-info-title-3</em></dt>
+    <dd>
+      <p>Personality used for info-title-3 This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-381">Variable: <strong>User
+    Option</strong> <em>voice-info-title-4</em></dt>
+    <dd>
+      <p>Personality used for info-title-4 This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-382">Variable: <strong>User
+    Option</strong> <em>voice-info-xref</em></dt>
+    <dd>
+      <p>Personality used for info-xref This personality uses
+      voice-animate-extra whose effect can be changed globally by
+      customizing voice-animate-extra-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-383">Variable: <strong>User
+    Option</strong> <em>voice-info-xref-visited</em></dt>
+    <dd>
+      <p>Personality used for info-xref-visited This personality
+      uses voice-animate-medium whose effect can be changed
+      globally by customizing voice-animate-medium-settings.</p>
+    </dd>
+  </dl>
+  <hr />
+  <div class="header">
+    <p>Next: <a href="emacspeak_002dispell.html" accesskey="n" rel=
+    "next">emacspeak-ispell</a>, Previous: <a href=
+    "emacspeak_002dindium.html" accesskey="p" rel=
+    "prev">emacspeak-indium</a>, Up: <a href=
+    "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
+    "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
+    "index.html#SEC_Contents" title="Table of contents" rel=
+    "contents">Contents</a>][<a href="Concept-Index.html" title=
+    "Index" rel="index">Index</a>]</p>
+  </div>
 </body>
 </html>
