--- a/manual/emacspeak_002dtab_002dbar.html
+++ b/manual/emacspeak_002dtab_002dbar.html
@@ -71,6 +71,44 @@
   <var>browse-url-new-window-flag</var> set to T to have EWW open
   Web pages in a new buffer, then set
   <var>eww-browse-url-new-window-is-tab</var> to nil to avoid
-  leaking tabs.</p>
+  leaking tabs.</p><span id=
+  "emacspeak_002dtab_002dbar-Options"></span>
+  <h4 class="subsection">12.195.1 emacspeak-tab-bar Options</h4>
+  <dl>
+    <dt id="index-User-Option-808">Variable: <strong>User
+    Option</strong> <em>voice-tab-bar</em></dt>
+    <dd>
+      <p>Personality used for tab-bar This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-809">Variable: <strong>User
+    Option</strong> <em>voice-tab-bar-tab</em></dt>
+    <dd>
+      <p>Personality used for tab-bar-tab This personality uses
+      voice-highlight whose effect can be changed globally by
+      customizing voice-highlight-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-810">Variable: <strong>User
+    Option</strong> <em>voice-tab-bar-tab-inactive</em></dt>
+    <dd>
+      <p>Personality used for tab-bar-tab-inactive This personality
+      uses voice-smoothen whose effect can be changed globally by
+      customizing voice-smoothen-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-811">Variable: <strong>User
+    Option</strong> <em>voice-tab-line</em></dt>
+    <dd>
+      <p>Personality used for tab-line This personality uses
+      voice-lighten whose effect can be changed globally by
+      customizing voice-lighten-settings.</p>
+    </dd>
+  </dl>
 </body>
 </html>
