--- a/manual/emacspeak_002dwoman.html
+++ b/manual/emacspeak_002dwoman.html
@@ -66,6 +66,44 @@
   <hr />
   <span id="emacspeak_002dwoman-1"></span>
   <h3 class="section">12.227 emacspeak-woman</h3>
-  <p>WOMAN == Man pages implemented in Emacs Lisp</p>
+  <p>WOMAN == Man pages implemented in Emacs Lisp</p><span id=
+  "emacspeak_002dwoman-Options"></span>
+  <h4 class="subsection">12.227.1 emacspeak-woman Options</h4>
+  <dl>
+    <dt id="index-User-Option-881">Variable: <strong>User
+    Option</strong> <em>voice-woman-bold</em></dt>
+    <dd>
+      <p>Personality used for woman-bold This personality uses
+      voice-bolden whose effect can be changed globally by
+      customizing voice-bolden-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-882">Variable: <strong>User
+    Option</strong> <em>voice-woman-edition</em></dt>
+    <dd>
+      <p>Personality used for woman-edition This personality uses
+      voice-bolden-medium whose effect can be changed globally by
+      customizing voice-bolden-medium-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-883">Variable: <strong>User
+    Option</strong> <em>voice-woman-italic</em></dt>
+    <dd>
+      <p>Personality used for woman-italic This personality uses
+      voice-animate whose effect can be changed globally by
+      customizing voice-animate-settings.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-884">Variable: <strong>User
+    Option</strong> <em>voice-woman-unknown</em></dt>
+    <dd>
+      <p>Personality used for woman-unknown This personality uses
+      voice-monotone whose effect can be changed globally by
+      customizing voice-monotone-settings.</p>
+    </dd>
+  </dl>
 </body>
 </html>
